# qr_generator

./: .gitignore  README.md
.github/workflows/: checks.yml  deploy-pages.yml
qr_generator/: Cargo.toml
qr_generator/src/: lib.rs
qr_generator/tests/: intergration_test.rs
qr_generator/www/: app.js  index.html  styles.css
