[package]
name = "qr_generator"
version = "0.1.0"
edition = "2024"
description = "Lightweight QR code generator compiled to WebAssembly"
license = "MIT"
repository = "https://github.com/Aleksandr-biochem/qr_generator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
qrcode = { version = "0.14", default-features = false }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "1"
url = "2"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"